NewArchive/80311e5edba897b1806fefa62c7763dc-d80e5c96127e74b454c4412019a958f9/output
+ clang++ -std=c++11 -O2 -pthread -lgmp main.cpp
main.cpp:35:5: error: static_assert failed "Sorting requires a Random Access Container."
    static_assert(std::is_same<iterator_category, std::random_access_iterator_tag>::value,
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:46:5: note: in instantiation of function template specialization 'sort<std::list<int, std::allocator<int> > >' requested here
    sort(container);
    ^
In file included from main.cpp:1:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/algorithm:62:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_algo.h:5475:22: error: invalid operands to binary expression ('std::_List_iterator<int>' and 'std::_List_iterator<int>')
                                std::__lg(__last - __first) * 2);
                                          ~~~~~~ ^ ~~~~~~~
main.cpp:38:10: note: in instantiation of function template specialization 'std::sort<std::_List_iterator<int> >' requested here
    std::sort(begin(container), end(container));
         ^
main.cpp:46:5: note: in instantiation of function template specialization 'sort<std::list<int, std::allocator<int> > >' requested here
    sort(container);
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_bvector.h:208:3: note: candidate function not viable: no known conversion from 'std::_List_iterator<int>' to 'const std::_Bit_iterator_base' for 1st argument
  operator-(const _Bit_iterator_base& __x, const _Bit_iterator_base& __y)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_iterator.h:327:5: note: candidate template ignored: could not match 'reverse_iterator' against '_List_iterator'
    operator-(const reverse_iterator<_Iterator>& __x,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_iterator.h:379:5: note: candidate template ignored: could not match 'reverse_iterator' against '_List_iterator'
    operator-(const reverse_iterator<_IteratorL>& __x,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_iterator.h:1104:5: note: candidate template ignored: could not match 'move_iterator' against '_List_iterator'
    operator-(const move_iterator<_IteratorL>& __x,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_iterator.h:1111:5: note: candidate template ignored: could not match 'move_iterator' against '_List_iterator'
    operator-(const move_iterator<_Iterator>& __x,
    ^
In file included from main.cpp:1:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/algorithm:62:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_algo.h:2233:18: error: invalid operands to binary expression ('std::_List_iterator<int>' and 'std::_List_iterator<int>')
      if (__last - __first > int(_S_threshold))
          ~~~~~~ ^ ~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_algo.h:5476:9: note: in instantiation of function template specialization 'std::__final_insertion_sort<std::_List_iterator<int> >' requested here
          std::__final_insertion_sort(__first, __last);
               ^
main.cpp:38:10: note: in instantiation of function template specialization 'std::sort<std::_List_iterator<int> >' requested here
    std::sort(begin(container), end(container));
         ^
main.cpp:46:5: note: in instantiation of function template specialization 'sort<std::list<int, std::allocator<int> > >' requested here
    sort(container);
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_bvector.h:208:3: note: candidate function not viable: no known conversion from 'std::_List_iterator<int>' to 'const std::_Bit_iterator_base' for 1st argument
  operator-(const _Bit_iterator_base& __x, const _Bit_iterator_base& __y)
  ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_iterator.h:327:5: note: candidate template ignored: could not match 'reverse_iterator' against '_List_iterator'
    operator-(const reverse_iterator<_Iterator>& __x,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_iterator.h:379:5: note: candidate template ignored: could not match 'reverse_iterator' against '_List_iterator'
    operator-(const reverse_iterator<_IteratorL>& __x,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_iterator.h:1104:5: note: candidate template ignored: could not match 'move_iterator' against '_List_iterator'
    operator-(const move_iterator<_IteratorL>& __x,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_iterator.h:1111:5: note: candidate template ignored: could not match 'move_iterator' against '_List_iterator'
    operator-(const move_iterator<_Iterator>& __x,
    ^
3 errors generated.
